gen/grammars/LenguajeQParser.java
// Generated from D:/UCLV/Compiladores/Old/LenguajeQ/src/grammars\LenguajeQ.g4 by ANTLR 4.12.0
package grammars;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LenguajeQParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, TK_BEGIN=13, TK_END=14, TK_PRINT=15, TK_PRINTLN=16, 
		TK_READ=17, TK_TIPO_INT=18, TK_TIPO_FLOAT=19, TK_TIPO_STRING=20, TK_IF=21, 
		TK_ELSE=22, TK_TIMES=23, TK_MEAN=24, TK_CTE_INT=25, TK_CTE_HEX=26, TK_CTE_FLOAT=27, 
		TK_CTE_STRING=28, TK_ID=29, LINE_COMMENT=30, COMMENT=31, WS=32;
	public static final int
		RULE_start = 0, RULE_dcl = 1, RULE_sent = 2, RULE_sentVarLocalDec = 3, 
		RULE_sentAsig = 4, RULE_sentEntrada = 5, RULE_sentSalida = 6, RULE_sentIf = 7, 
		RULE_bloque = 8, RULE_sentTimes = 9, RULE_sentMean = 10, RULE_exp = 11, 
		RULE_constante = 12, RULE_tipo = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "dcl", "sent", "sentVarLocalDec", "sentAsig", "sentEntrada", 
			"sentSalida", "sentIf", "bloque", "sentTimes", "sentMean", "exp", "constante", 
			"tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "';'", "'('", "')'", "','", "'{'", "'}'", "'+'", "'-'", 
			"'!'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "TK_BEGIN", "TK_END", "TK_PRINT", "TK_PRINTLN", "TK_READ", "TK_TIPO_INT", 
			"TK_TIPO_FLOAT", "TK_TIPO_STRING", "TK_IF", "TK_ELSE", "TK_TIMES", "TK_MEAN", 
			"TK_CTE_INT", "TK_CTE_HEX", "TK_CTE_FLOAT", "TK_CTE_STRING", "TK_ID", 
			"LINE_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LenguajeQ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeQParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TerminalNode TK_BEGIN() { return getToken(LenguajeQParser.TK_BEGIN, 0); }
		public TerminalNode TK_END() { return getToken(LenguajeQParser.TK_END, 0); }
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1835008L) != 0)) {
				{
				{
				setState(28);
				dcl();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(TK_BEGIN);
			setState(36); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(35);
				sent();
				}
				}
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 549421120L) != 0) );
			setState(40);
			match(TK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DclContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode TK_ID() { return getToken(LenguajeQParser.TK_ID, 0); }
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			tipo();
			setState(43);
			match(TK_ID);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(44);
				match(T__0);
				setState(45);
				constante();
				}
			}

			setState(48);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentContext extends ParserRuleContext {
		public SentVarLocalDecContext sentVarLocalDec() {
			return getRuleContext(SentVarLocalDecContext.class,0);
		}
		public SentAsigContext sentAsig() {
			return getRuleContext(SentAsigContext.class,0);
		}
		public SentSalidaContext sentSalida() {
			return getRuleContext(SentSalidaContext.class,0);
		}
		public SentEntradaContext sentEntrada() {
			return getRuleContext(SentEntradaContext.class,0);
		}
		public SentIfContext sentIf() {
			return getRuleContext(SentIfContext.class,0);
		}
		public SentTimesContext sentTimes() {
			return getRuleContext(SentTimesContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public SentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentContext sent() throws RecognitionException {
		SentContext _localctx = new SentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sent);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_TIPO_INT:
			case TK_TIPO_FLOAT:
			case TK_TIPO_STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				sentVarLocalDec();
				}
				break;
			case TK_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				sentAsig();
				}
				break;
			case TK_PRINT:
			case TK_PRINTLN:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				sentSalida();
				}
				break;
			case TK_READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				sentEntrada();
				}
				break;
			case TK_IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				sentIf();
				}
				break;
			case TK_TIMES:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				sentTimes();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 7);
				{
				setState(56);
				bloque();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentVarLocalDecContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode TK_ID() { return getToken(LenguajeQParser.TK_ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SentVarLocalDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentVarLocalDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentVarLocalDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentVarLocalDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentVarLocalDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentVarLocalDecContext sentVarLocalDec() throws RecognitionException {
		SentVarLocalDecContext _localctx = new SentVarLocalDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentVarLocalDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			tipo();
			setState(60);
			match(TK_ID);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(61);
				match(T__0);
				setState(62);
				exp(0);
				}
			}

			setState(65);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentAsigContext extends ParserRuleContext {
		public TerminalNode TK_ID() { return getToken(LenguajeQParser.TK_ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SentAsigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentAsig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentAsig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentAsig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentAsig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentAsigContext sentAsig() throws RecognitionException {
		SentAsigContext _localctx = new SentAsigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentAsig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(TK_ID);
			setState(68);
			match(T__0);
			setState(69);
			exp(0);
			setState(70);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentEntradaContext extends ParserRuleContext {
		public TerminalNode TK_READ() { return getToken(LenguajeQParser.TK_READ, 0); }
		public TerminalNode TK_ID() { return getToken(LenguajeQParser.TK_ID, 0); }
		public SentEntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentEntrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentEntrada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentEntrada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentEntradaContext sentEntrada() throws RecognitionException {
		SentEntradaContext _localctx = new SentEntradaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentEntrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(TK_READ);
			setState(73);
			match(T__2);
			setState(74);
			match(TK_ID);
			setState(75);
			match(T__3);
			setState(76);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentSalidaContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode TK_PRINT() { return getToken(LenguajeQParser.TK_PRINT, 0); }
		public TerminalNode TK_PRINTLN() { return getToken(LenguajeQParser.TK_PRINTLN, 0); }
		public SentSalidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentSalida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentSalida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentSalida(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentSalida(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentSalidaContext sentSalida() throws RecognitionException {
		SentSalidaContext _localctx = new SentSalidaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentSalida);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==TK_PRINT || _la==TK_PRINTLN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			match(T__2);
			setState(80);
			exp(0);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(81);
				match(T__4);
				setState(82);
				exp(0);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(T__3);
			setState(89);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentIfContext extends ParserRuleContext {
		public TerminalNode TK_IF() { return getToken(LenguajeQParser.TK_IF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public TerminalNode TK_ELSE() { return getToken(LenguajeQParser.TK_ELSE, 0); }
		public SentIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentIfContext sentIf() throws RecognitionException {
		SentIfContext _localctx = new SentIfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(TK_IF);
			setState(92);
			match(T__2);
			setState(93);
			exp(0);
			setState(94);
			match(T__3);
			setState(95);
			sent();
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(96);
				match(TK_ELSE);
				setState(97);
				sent();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitBloque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__5);
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				sent();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 549421120L) != 0) );
			setState(106);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentTimesContext extends ParserRuleContext {
		public TerminalNode TK_TIMES() { return getToken(LenguajeQParser.TK_TIMES, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentTimesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentTimes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentTimes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentTimes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentTimes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentTimesContext sentTimes() throws RecognitionException {
		SentTimesContext _localctx = new SentTimesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentTimes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(TK_TIMES);
			setState(109);
			match(T__2);
			setState(110);
			exp(0);
			setState(111);
			match(T__3);
			setState(112);
			sent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentMeanContext extends ParserRuleContext {
		public TerminalNode TK_MEAN() { return getToken(LenguajeQParser.TK_MEAN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public SentMeanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentMean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).enterSentMean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeQListener ) ((LenguajeQListener)listener).exitSentMean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeQVisitor ) return ((LenguajeQVisitor<? extends T>)visitor).visitSentMean(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentMeanContext sentMean() throws RecognitionException {
		SentMeanContext _localctx = new SentMeanContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentMean);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(TK_MEAN);
			setState(115);
			match(T__2);
			setState(116);
			exp(0);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(117);
				match(T__4);
				setState(118);
				exp(0);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
